--- a/Templates/vraag_indexeren_naar_taxonomie.html
+++ b/Templates/vraag_indexeren_naar_taxonomie.html
@@ -6,16 +6,29 @@
   <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
-    <header class="header">
-            <a href="../index.html">
-                <img src="../static/assets/logo/testcorrect-logo.svg" alt="Test-Correct Logo" class="logo">
-            </a>
-            <nav>
-                <a href="#" class="button">Vragen</a>
-                <a href="#" class="button">AI Prompts</a>
-                <a href="#" class="button" onclick="window.location.href='/redacteur';">Redacteuren</a>
+    <header class="top-bar">
+        <div class="container-main">
+            <div class="left-side">
+                <a href="https://www.test-correct.nl/" class="site-logo">
+                    <img src="../static/assets/logo/testcorrect-logo.svg" alt="Logo">
+                </a>
+            </div>
 
-            </nav>
+            <div class="menu-container">
+                <ul class="main-navigation">
+                    <li><a href="#">Oplossingen</a></li>
+                    <li><a href="https://www.test-correct.nl/toetsplatform">Toetsplatform</a></li>
+                    <li><a href="https://www.test-correct.nl/pakketten">Aanbod</a></li>
+                    <li><a href="https://www.test-correct.nl/support">Support</a></li>
+                    <li><a href="https://www.test-correct.nl/overons">Over</a></li>
+                </ul>
+            </div>
+
+            <div class="button-container">
+                <a href="https://www.test-correct.nl/welcome" class="button one">Probeer nu</a>
+                <a href="https://welcome.test-correct.nl/login" class="button two">Log in</a>
+            </div>
+        </div>
     </header>
     <div class = "container">
         <div>vraag: <span id="vraag">{{ vraag }}</span></div>
