--- a/Templates/vraag_indexeren_resultaat.html
+++ b/Templates/vraag_indexeren_resultaat.html
@@ -48,8 +48,7 @@
             </form>
             <br>
             <div>
-            <label for="chatgpt_antwoord">gegenereerd voorstel:</label>
-            <span id="chatgpt_antwoord"> ai response...</span>
+           <div>prompt: {{ prompt }}</div>
             </div>
             <br>
               <div class="button">
