give prompt data to result page

--- a/Templates/vraag_indexeren_resultaat.html
+++ b/Templates/vraag_indexeren_resultaat.html
@@ -48,7 +48,7 @@
             </form>
             <br>
             <div>
-           <div>prompt: {{ prompt }}</div>
+            <p>prompt: {{ prompt }}</p>
             </div>
             <br>
               <div class="button">
