adjusted the html for the generated ai response

--- a/Templates/vraag_indexeren_resultaat.html
+++ b/Templates/vraag_indexeren_resultaat.html
@@ -51,6 +51,8 @@
             <p>prompt: {{ prompt }}</p>
             </div>
             <br>
+            <p>generated response: {{ ai_response }}</p>
+            <br>
               <div class="button">
                 <button class="button">taxonomie opslaan</button>
             </div>
