connected gpt to prompt

--- a/Templates/vraag_indexeren_resultaat.html
+++ b/Templates/vraag_indexeren_resultaat.html
@@ -51,7 +51,8 @@
             <p>prompt: {{ prompt }}</p>
             </div>
             <br>
-            <p>generated response: {{ ai_response }}</p>
+            <div>generated niveau: {{ ai_niveau }}</div>
+            <div>uitleg: {{ ai_uitleg }}</div>
             <br>
               <div class="button">
                 <button class="button">taxonomie opslaan</button>
