Adjusting link based on search

--- a/Templates/toetsvragen.html
+++ b/Templates/toetsvragen.html
@@ -99,32 +99,41 @@
 
       <div class="pagination">
         {% if show_first %}
-            <a href="{{ url_for('toetsvragen', page=1) }}">Eerste pagina</a>
+<!--            <a href="{{ url_for('toetsvragen', page=1) }}">Eerste pagina</a>-->
+            <a href="{{ url_for('toetsvragen', page=1, search=search, vak=vak, taxonomie=taxonomie) }}">Eerste pagina</a>
         {% endif %}
 
         {% if prev_page %}
-            <a href="{{ url_for('toetsvragen', page=prev_page) }}">Vorige</a>
+<!--            <a href="{{ url_for('toetsvragen', page=prev_page) }}">Vorige</a>-->
+                <a href="{{ url_for('toetsvragen', page=prev_page, search=search, vak=vak, taxonomie=taxonomie) }}">Vorige</a>
         {% endif %}
 
-        {% for num in page_numbers %}
-          {% if num == '...' %}
-             <span>...</span>
+<!--        {% for num in page_numbers %}-->
+<!--          {% if num == '...' %}-->
+<!--             <span>...</span>-->
 
-          {% else %}
-               <a href="{{ url_for('toetsvragen', page=num) }}"
-                  class="{% if num == page %}active{% endif %}">
-                  {{ num }}
-               </a>
-          {% endif %}
+<!--          {% else %}-->
+<!--               <a href="{{ url_for('toetsvragen', page=num) }}"-->
+<!--                  class="{% if num == page %}active{% endif %}">-->
+<!--                  {{ num }}-->
+<!--               </a>-->
+<!--          {% endif %}-->
+<!--        {% endfor %}-->
+
+        {% for link in page_numbers %}
+              <a href="{{ link }}" class="{% if loop.index == page %}active{% endif %}">
+                {{ loop.index }}
+              </a>
         {% endfor %}
 
-
         {% if next_page %}
-            <a href="{{ url_for('toetsvragen', page=next_page) }}">Volgende</a>
+<!--            <a href="{{ url_for('toetsvragen', page=next_page) }}">Volgende</a>-->
+                <a href="{{ url_for('toetsvragen', page=next_page, search=search, vak=vak, taxonomie=taxonomie) }}">Volgende</a>
         {% endif %}
 
         {% if show_last %}
-            <a href="{{ url_for('toetsvragen', page=total_pages) }}">Laatste pagina</a>
+<!--            <a href="{{ url_for('toetsvragen', page=total_pages) }}">Laatste pagina</a>-->
+                <a href="{{ url_for('toetsvragen', page=total_pages, search=search, vak=vak, taxonomie=taxonomie) }}">Laatste pagina</a>
         {% endif %}
       </div>
 </body>
