I try to connect the questions_id with indexeren.

--- a/Templates/vraag indexeren naar taxonomie.html
+++ b/Templates/vraag indexeren naar taxonomie.html
@@ -17,7 +17,7 @@
             </nav>
     </header>
     <div class = "container">
-        <div>vraag: <span id="vraag"></span></div>
+        <div>Vraag: <span id="vraag">{{ question }}</span></div>
         <br>
         <div>vak: biologie</div>
         <br>
@@ -34,6 +34,7 @@
         <br>
         <div class="button">
             <button class="button" onclick="window.location.href='/vraag_taxonomie_resultaat';">toepassen</button>
+        </div>
     </div>
 </body>
 </html>
