I try to connect the questions_id with indexeren.

--- a/Templates/vraag indexeren resultaat.html
+++ b/Templates/vraag indexeren resultaat.html
@@ -17,7 +17,7 @@
                 </nav>
         </header>
         <div class = "container">
-            <div>vraag: <span id="vraag"></span></div>
+            <div>Vraag: <span id="vraag">{{ question }}</span></div>
             <br>
             <div>vak: biologie</div>
             <br>
@@ -41,5 +41,6 @@
               <div class="button">
                 <button class="button">taxonomie opslaan</button>
             </div>
+        </div>
     </body>
 </html>
