--- a/Templates/toetsvragen.html
+++ b/Templates/toetsvragen.html
@@ -30,8 +30,8 @@
     </ul>
 
     <a href="{{ url_for('toetsvragen') }}" class="button" style="text-align: right;">Vragen</a>
-    <a href="{{ url_for('inlog') }}" class="button" style="text-align: right;">AI Prompts</a>
-    <a href="{{ url_for('inlog') }}" class="button" style="text-align: right;">Redacteuren</a>
+    <a href="{{ url_for('ai_prompts') }}" class="button" style="text-align: right;">AI Prompts</a>
+    <a href="{{ url_for('redacteur') }}" class="button" style="text-align: right;">Redacteuren</a>
 
     <h2 style="font-family:Nunito extrabold,sans-serif; color:#041F74;"> Toetsvragen lijst </h2>
 
