updated the base for the header

--- a/Templates/base.html
+++ b/Templates/base.html
@@ -28,8 +28,8 @@
         </div>
 
         <div class="button-container">
-            <a href="https://www.test-correct.nl/welcome" class="button one">Probeer nu</a>
-            <a href="https://welcome.test-correct.nl/login" class="button two">Log in</a>
+            <a href="https://www.test-correct.nl/welcome" class="button-1">Probeer nu</a>
+            <a href="https://welcome.test-correct.nl/login" class="button-2">Log in</a>
         </div>
     </div>
 </header>
