--- a/static/css/toetsvragen.css
+++ b/static/css/toetsvragen.css
@@ -75,11 +75,12 @@ body {
 .pagination a {
     padding: 3px;
     text-decoration: none;
-    color:blue;
+    color:#041F74;
     margin: 5px;
     border: 0 solid #ddd;
     border-radius: 5px;
     text-align: center;
+    font-family:Nunito, sans-serif;
 }
 
 .pagination a:hover {
@@ -180,5 +181,5 @@ form select {
 }
 
 table {
-    margin-inline: 20px;
+    margin: 10px;
 }
