--- a/static/css/toetsvragen.css
+++ b/static/css/toetsvragen.css
@@ -8,11 +8,11 @@ body {
 
 /*Button 1*/
 .first-button {
-  text-align: right;
+  text-align: center;
   background-color: #3dbb56;
   border: none;
   color: white;
-  padding: 10px 32px;
+  padding: 10px 25px;
   text-decoration: none;
   display: inline-block;
   font-size: 17px;
@@ -41,7 +41,7 @@ body {
   background-color: #041df5;
   border: none;
   color: white;
-  padding: 10px 32px;
+  padding: 10px 25px;
   text-decoration: none;
   display: inline-block;
   font-size: 17px;
@@ -184,3 +184,21 @@ table {
     margin: 10px;
 }
 
+.content-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px;
+    padding: 0;
+}
+
+.content-title {
+    font-family: Nunito Extrabold, sans-serif;
+    color: #3dba55;
+    margin: 0;
+}
+
+.button-group {
+    display: flex;
+    gap: 10px;
+}
