--- a/Templates/vraag_taxonomie_wijzigen.html
+++ b/Templates/vraag_taxonomie_wijzigen.html
@@ -3,42 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>inlogpagina</title>
-    <link rel="stylesheet" href="../static/css/inloggen.css">
+    <title>Taxonomie wijzigen</title>
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/ai_prompts.css">
-        </head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/toetsvragen.css') }}">
+</head>
+
 <body>
+<header>
+    <ul class="ul">
+      <li>
+          <a style= "border: none; cursor: pointer; scale:100%; background:none;" href="https://www.test-correct.nl/" >
+              <img src="static/assets/logo/testcorrect-logo.svg" alt="Link to test-correct homepage" style= "border: none; cursor: pointer; scale:100%; background:none; align-items: center;">
+          </a>
+      </li>
+      <li><a href="https://www.test-correct.nl/voor-het-vo">Oplossingen</a></li>
+      <li><a href="https://www.test-correct.nl/toetsplatform">Platform</a></li>
+      <li><a href="https://www.test-correct.nl/pakketten">Aanbod</a></li>
+      <li><a href="https://www.test-correct.nl/support">Over ons</a></li>
+      <li><a href="https://www.test-correct.nl/overons">Support</a></li>
+      <li
+        style="color: #041F74; font-family:nunito, regular, serif; font-size:18px; padding:15px; gap: 5px">
+        <img src="static/assets/icons/telefoon_icoon.png" alt="Telefoonnummer" style="width:19PX; height:19px;">
+         010 7171 171
+      </li>
+      <li>
+          <a class="second-button" href="{{ url_for('inlog') }}">Login</a>
+      </li>
+      <li>
+          <a class="first-button" href="https://www.test-correct.nl/welcome">Boek online demo</a>
+      </li>
+    </ul>
+  </header>
 
-<header class="top-bar">
-    <div class="container-main">
-        <div class="left-side">
-            <a href="https://www.test-correct.nl/" class="site-logo">
-                <img src="../static/assets/logo/testcorrect-logo.svg" alt="Logo">
-            </a>
-        </div>
-
-        <div class="menu-container">
-            <ul class="main-navigation">
-                <li><a href="#">Oplossingen</a></li>
-                <li><a href="https://www.test-correct.nl/toetsplatform">Toetsplatform</a></li>
-                <li><a href="https://www.test-correct.nl/pakketten">Aanbod</a></li>
-                <li><a href="https://www.test-correct.nl/support">Support</a></li>
-                <li><a href="https://www.test-correct.nl/overons">Over</a></li>
-            </ul>
-        </div>
-
-        <div class="button-container">
-            <a href="https://www.test-correct.nl/welcome" class="button-1">Probeer nu</a>
-            <a href="https://welcome.test-correct.nl/login" class="button-2">Log in</a>
-        </div>
+    <div class="content-row">
+      <h2> Taxonomie wijzigen </h2>
+      <div class="button-group">
+        <a class="first-button" href="{{ url_for('toetsvragen') }}" >Vragen</a>
+        <a class="first-button" href="{{ url_for('ai_prompts') }}" >AI Prompts</a>
+        <a class="first-button" href="{{ url_for('redacteur') }}" >Redacteuren</a>
+      </div>
     </div>
-</header>
+
+<div class = "container">
+        <div>Vraag: <span id="vraag">{{ question }}</span></div>
+        <br>
+        <div>vak: {{ vak }}</div>
+        <br>
+        <div>onderwijsniveau: {{ onderwijsniveau }}</div>
+        <br>
+        <div>leerjaar: {{ leerjaar }}</div>
+        <br>
+        <div>Bloom antwoord: {{ bloom_answer }}</div>
+        <form method="GET" action="{{ url_for('indexeren') }}">
+        <input type="hidden" name="questions_id" value="{{ questions_id }}">
+        <button type="submit" class="first-button">Wijzigen</button>
+        </form>
+        </div>
 
 {%  block main %}
 {% endblock %}
 
-<footer><a href="https://www.test-correct.nl/"><strong>Keer terug naar home pagina</strong></a></footer>
+<footer style="text-align: center;"><a href="https://www.test-correct.nl/"><strong>Keer terug naar home pagina</strong></a></footer>
 
 </body>
 </html>
