Aanpassingen + button doorverwezen.

--- a/Templates/redacteur.html
+++ b/Templates/redacteur.html
@@ -26,7 +26,7 @@
             </tbody>
         </table>
         <div class="button">
-            <button class="button">Nieuwe redacteur</button>
+            <a href="{{ url_for('nieuwe_redacteur') }}" class="button">Nieuwe redacteur</a>
         </div>
     </main>
 {% endblock %}
