Aanpassingen + button doorverwezen.

--- a/Templates/prompt_details.html
+++ b/Templates/prompt_details.html
@@ -17,7 +17,7 @@
             <img src="../static/assets/logo/testcorrect-logo.svg" alt="Test-Correct Logo" class="logo">
         </a>
         <nav>
-            <a href="#" class="button">Vragen</a>
+            <a href="/toetsvragen" class="button">Vragen</a>
             <a href="/ai_prompts" class="button">AI Prompts</a>
             <a href="/redacteur" class="button active">Redacteuren</a>
         </nav>
