--- a/Templates/ai_prompts.html
+++ b/Templates/ai_prompts.html
@@ -4,7 +4,7 @@
 <body>
     <header class="header">
         <nav>
-            <a href="#" class="button">Vragen</a>
+            <a href="/toetsvragen" class="button">Vragen</a>
             <a href="/ai_prompts" class="button">AI Prompts</a>
             <a href="/redacteur" class="button active">Redacteuren</a>
         </nav>
